--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="index-container">
 
       <div class="fakebutton">
-        <span class="button" id="toggle-overlay">  f  </span>
+        <span class="button" id="toggle-overlay">  x  </span>
       </div>
 
     <div class=" index-title">
